==> RT-Thread/rt-thread/bsp/wch/risc-v/Libraries/ch32v30x_libraries/ch32v307_hal/source/ch32v30x_sdio.c <==
#include "ch32v30x_sdio.h"
#include "ch32v30x_rcc.h"
#define SDIO_OFFSET         (SDIO_BASE - PERIPH_BASE)
#define CLKCR_CLEAR_MASK    ((uint32_t)0xFFFF8100)
#define PWR_PWRCTRL_MASK    ((uint32_t)0xFFFFFFFC)
#define DCTRL_CLEAR_MASK    ((uint32_t)0xFFFFFF08)
#define CMD_CLEAR_MASK      ((uint32_t)0xFFFFF800)
#define SDIO_RESP_ADDR      ((uint32_t)(SDIO_BASE + 0x14))

void SDIO_DeInit(void)
{
    SDIO->POWER = 0x00000000;
    SDIO->CLKCR = 0x00000000;
    SDIO->ARG = 0x00000000;
    SDIO->CMD = 0x00000000;
    SDIO->DTIMER = 0x00000000;
    SDIO->DLEN = 0x00000000;
    SDIO->DCTRL = 0x00000000;
    SDIO->ICR = 0x00C007FF;
    SDIO->MASK = 0x00000000;
}

void SDIO_Init(SDIO_InitTypeDef *SDIO_InitStruct)
{
    uint32_t tmpreg = 0;

    tmpreg = SDIO->CLKCR;
    tmpreg &= CLKCR_CLEAR_MASK;
    tmpreg |= (SDIO_InitStruct->SDIO_ClockDiv | SDIO_InitStruct->SDIO_ClockPowerSave |
               SDIO_InitStruct->SDIO_ClockBypass | SDIO_InitStruct->SDIO_BusWide |
               SDIO_InitStruct->SDIO_ClockEdge | SDIO_InitStruct->SDIO_HardwareFlowControl);

    SDIO->CLKCR = tmpreg;
}

void SDIO_SendCommand(SDIO_CmdInitTypeDef *SDIO_CmdInitStruct)
{
    uint32_t tmpreg = 0;

    SDIO->ARG = SDIO_CmdInitStruct->SDIO_Argument;

    tmpreg = SDIO->CMD;
    tmpreg &= CMD_CLEAR_MASK;
    tmpreg |= (uint32_t)SDIO_CmdInitStruct->SDIO_CmdIndex | SDIO_CmdInitStruct->SDIO_Response | SDIO_CmdInitStruct->SDIO_Wait | SDIO_CmdInitStruct->SDIO_CPSM;

    SDIO->CMD = tmpreg;
}

uint32_t SDIO_GetResponse(uint32_t SDIO_RESP)
{
    __IO uint32_t tmp = 0;

    tmp = SDIO_RESP_ADDR + SDIO_RESP;

    return (*(__IO uint32_t *)tmp);
}

void SDIO_DataConfig(SDIO_DataInitTypeDef *SDIO_DataInitStruct)
{
    uint32_t tmpreg = 0;

    SDIO->DTIMER = SDIO_DataInitStruct->SDIO_DataTimeOut;
    SDIO->DLEN = SDIO_DataInitStruct->SDIO_DataLength;
    tmpreg = SDIO->DCTRL;
    tmpreg &= DCTRL_CLEAR_MASK;
    tmpreg |= (uint32_t)SDIO_DataInitStruct->SDIO_DataBlockSize | SDIO_DataInitStruct->SDIO_TransferDir | SDIO_DataInitStruct->SDIO_TransferMode | SDIO_DataInitStruct->SDIO_DPSM;

    SDIO->DCTRL = tmpreg;
}
